[B]1.3.0[/B]
- Added rarfile support thanks to ratmole
- Cosmetics

[B]1.2.5[/B]
- Cosmetics

[B]1.2.4[/B]
- Updated subztv.gr

[B]1.2.3[/B]
- Fixed subtitles.gr provider
- Code cosmetics

[B]1.2.2[/B]
- Rebased to utilize tulip libraries

[B]1.2.1[/B]
- Cosmetics

[B]1.2.0[/B]
- Cosmetics and code simplification
- Updated subtitles.gr
- Updated xsubs.tv
- Added support for xsubs.tv accounts
- Updated subztv.gr

[B]1.1.1[/B]
- Fixed issue with subtitle query

[B]1.1.0[/B]
- Added support for subz.blog-spot.gr
- Added support for xsubs.tv

[B]1.0.0[/B]
- Initial version