@@ -6,9 +6,9 @@ About
 -----
 Search and download subtitles from subtitles.gr, xsubs.tv and subztv.gr
 
-Kodi Addon for http://www.subtitles.gr/, http://xsubs.tv/ and http://subztv.gr/
+Kodi Addon for http://www.subtitles.gr/, http://xsubs.tv/ and http://subztv.club/
 
-This service is not published nor endorsed by subtitles.gr, xsubs.tv and subztv.gr
+This service is not published nor endorsed by subtitles.gr, xsubs.tv and subztv.club
 
 
 Artwork
