@@ -1,20 +1,60 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="service.subtitles.subtitles.gr" name="Subtitles.gr" version="1.3.0~beta2" provider-name="Twilight0">
+<addon id="service.subtitles.subtitles.gr" name="Subtitles.gr" version="1.3.0" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
-		<import addon="script.module.tulip" version="1.0.7" />
+		<import addon="script.module.tulip" version="1.2.6" />
 	</requires>
 	<extension point="xbmc.subtitle.module" library="service.py">
 	</extension>
 	<extension point="xbmc.addon.metadata">
-		<summary lang="en">Subtitles.gr</summary>
-		<description lang="en">Search and download subtitles from subtitles.gr, xsubs.tv and subztv.club</description>
-		<description lang="el">Εύρεση και λήψη υποτίτλων από τα subtitles.gr, xsubs.tv και subztv.club</description>
-		<disclaimer lang="en">This service is only for Greek subtitles and not published nor endorsed by subtitles.gr, xsubs.tv and subztv.club</disclaimer>
-		<disclaimer lang="el">Υπηρεσία μόνο ελληνικών υποτίτλων που δεν έχει δημοσιευθεί ούτε εγκριθεί από τα subtitles.gr, xsubs.tv και subztv.club</disclaimer>
+		<summary lang="en_GB">Subtitles.gr addon for subtitles</summary>
+		<summary lang="en_GB">Πρόσθετο υποτίτλων Subtitles.gr</summary>
+        <description lang="en_GB">Search and download subtitles from subtitles.gr, xsubs.tv and subztv.club</description>
+		<description lang="el_GR">Εύρεση και λήψη υποτίτλων από τα subtitles.gr, xsubs.tv και subztv.club</description>
+		<disclaimer lang="en_GB">This service is only for Greek subtitles and not published nor endorsed by subtitles.gr, xsubs.tv and subztv.club</disclaimer>
+		<disclaimer lang="el_GR">Υπηρεσία μόνο ελληνικών υποτίτλων που δεν έχει δημοσιευθεί ούτε εγκριθεί από τα subtitles.gr, xsubs.tv και subztv.club</disclaimer>
 		<license>GNU GENERAL PUBLIC LICENSE. Version 3, 29 June 2007</license>
 		<website>http://www.subtitles.gr/</website>
 		<platform>all</platform>
 		<language>el</language>
+		<news>
+[B]1.3.0[/B]
+- Added support for rar archives
+  > Idea was introduced by ratmole
+- Cosmetics
+
+[B]1.2.5[/B]
+- Cosmetics
+
+[B]1.2.4[/B]
+- Updated subztv.gr
+
+[B]1.2.3[/B]
+- Fixed subtitles.gr provider
+- Code cosmetics
+
+[B]1.2.2[/B]
+- Rebased to utilize tulip libraries
+
+[B]1.2.1[/B]
+- Cosmetics
+
+[B]1.2.0[/B]
+- Cosmetics and code simplification
+- Updated subtitles.gr
+- Updated xsubs.tv
+- Added support for xsubs.tv accounts
+- Updated subztv.gr
+
+[B]1.1.1[/B]
+- Fixed issue with subtitle query
+
+[B]1.1.0[/B]
+- Added support for subz.blog-spot.gr
+- Added support for xsubs.tv
+
+[B]1.0.0[/B]
+- Initial version
+		</news>
 	</extension>
 </addon>
