@@ -140,23 +140,18 @@ class subztvclub:
             if len(files) == 0:
                 return
 
-            if f.lower().endswith(('.rar')):
+            if not f.lower().endswith('.rar'):
 
-                uri = "rar://[%s]/%s.srt" % (f, url.rpartition('/')[2][:-4])
-                content = control.openFile(uri).read()
-                subtitle = control.transPath('special://temp/') + url.rpartition('/')[2][:-4] + '.srt'
-                with open(subtitle, 'wb') as subFile:
-                    subFile.write(content)
-
-                return subtitle
-
-            else:
                 control.execute('Extract("%s","%s")' % (f, path))
 
             for i in range(0, 10):
 
                 try:
-                    dirs, files = control.listDir(path)
+                    if f.lower().endswith('.rar'):
+                        uri = "rar://{0}/".format(urllib.quote(f))
+                        dirs, files = control.listDir(uri)
+                    else:
+                        dirs, files = control.listDir(path)
                     if len(files) > 1:
                         break
                     if control.aborted is True:
@@ -165,13 +160,24 @@ class subztvclub:
                 except:
                     pass
 
-            control.deleteFile(f)
-
             subtitle = [i for i in files if any(i.endswith(x) for x in ['.srt', '.sub'])][0]
 
             subtitle = os.path.join(path, subtitle.decode('utf-8'))
 
-            return subtitle
+            if f.lower().endswith('.rar'):
+
+                content = control.openFile(uri + subtitle).read()
+
+                with open(subtitle, 'wb') as subFile:
+                    subFile.write(content)
+
+                control.deleteFile(f)
+
+                return subtitle
+
+            else:
+                control.deleteFile(f)
+                return subtitle
 
         except:
 
